attempt to fix homepage eboard card scrollbar color bug on mobile

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -458,6 +458,7 @@
     
     #eboard-card-list::-webkit-scrollbar-thumb {
         background-color: white;
+        color: white;
         border-radius: 1rem;
     }
 
